--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meeting Room Finder</title>
+    <link rel="preconnect" href="//okrcentral.github.io">
+    <link rel="preconnect" href="//fonts.gstatic.com">
+    <title>Ally.io</title>
   </head>
   <body>
     <div id="container"></div>
